gateway-api-training/code/demo/gatewayclass.yaml
# GatewayClass für Envoy Gateway (Tag 1)
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
